--- a/partials/_header.ejs
+++ b/partials/_header.ejs
@@ -58,11 +58,9 @@
                   <a class="nav-link" href="/about">About </a>
                 </li>
                 <li class="nav-item">
-                  <a class="nav-link" href="/products/cycle"> All  Cycles </a>
+                  <a class="nav-link" href="/products/cycle"> Categories </a>
                 </li>
-                <li class="nav-item">
-                  <a class="nav-link" href="/">Categories</a>
-                </li>
+              
                 <li class="nav-item">
                   <a class="nav-link" href="/contact">Contact</a>
                 </li>
