--- a/views/shopping.ejs
+++ b/views/shopping.ejs
@@ -1,126 +1,100 @@
-<!DOCTYPE html>
-<html>
-<head>
-	<title>Shopping Cart</title>
-	<meta charset="utf-8">
-	<meta name="viewport" content="width=device-width, initial-scale=1">
-	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css"">
-	<link href="https://fonts.googleapis.com/css?family=Montserrat" rel="stylesheet">
-	<link rel="stylesheet" href="/css/shopping.css">
-</head>
+
+<%- include  ('../partials/_header');  %>
+<head> <link href="https://fonts.googleapis.com/css?family=Montserrat" rel="stylesheet">
+	<link rel="stylesheet" href="/css/shopping.css"></head>
+
 <body>
 	<main class="page">
 	 	<section class="shopping-cart dark">
 	 		<div class="container">
 			        <div class="content">
+					
 	 				<div class="row">
 	 					<div class="col-md-12 col-lg-8">
+
+							
 	 						<div class="items">
+
+						
+
+								<!-- Buraya ürün sayısı eklenmesi gereli , sayıyı da function aracılığıyla almalyız-->
 				 				<div class="product">
+									<% for(let i=0; i< basket.length; i++){ %>
+									
 				 					<div class="row">
 					 					<div class="col-md-3">
-					 						<img class="img-fluid mx-auto d-block image" src="assets/img/image.jpg">
-					 					</div>
+					 						<img class="img-fluid mx-auto d-block image" src=" <%= basket[i].image %>">
+					 					</div> <!--col-lg-3 close-->
+
 					 					<div class="col-md-8">
 					 						<div class="info">
 						 						<div class="row">
-							 						<div class="col-md-5 product-name">
+							 						<div class="col-md-4 product-name">
 							 							<div class="product-name">
-								 							<a href="#" >Lorem Ipsum dolor</a>
+								 							<a href="#" > <%= basket[i].name %></a>
 								 							<div class="product-info">
-									 							<div>Display: <span class="value">5 inch</span></div>
-									 							<div>RAM: <span class="value">4GB</span></div>
-									 							<div>Memory: <span class="value">32GB</span></div>
+									 							<div>Price <span class="value"> <%= basket[i].price%></span></div>
+									 							<div>Size: <span class="value"> <%= basket[i].size %></span></div>
+									 							<div>Color: <span class="value"> <%= basket[i].color %></span></div>
 									 						</div>
 									 					</div>
 							 						</div>
-							 						<div class="col-md-4 quantity">
-							 							<label for="quantity">Quantity:</label>
-							 							<input id="quantity" type="number" value ="1" class="form-control quantity-input">
+							 						
+													 <div class="col-md-4 quantity" >
+														<label>Quantity:</label>
+														<div class="input-group" >
+														<a href="/users/shopping/decrease/<%= basket[i]._id  %>?_method=DELETE">  <button class="btn btn-outline-secondary decrease ">🔽</button></a>
+														  <input type="number" value="<%= basket[i].quantity %>" class="form-control quantity-input" style="width:10px; align-items: center;" id="quantity-<%= basket[i]._id %>" readonly>
+														  <a href="/users/shopping/<%= basket[i]._id  %>?_method=GET">  <button class="btn btn-outline-secondary increase"  >🔼</button></a>
+														</div>
+													  </div>
+							 						
+													<div class="col-md-3 price">
+							 							<span>$  <%= (basket[i].price * basket[i].quantity) %></span>
 							 						</div>
-							 						<div class="col-md-3 price">
-							 							<span>$120</span>
-							 						</div>
-							 					</div>
-							 				</div>
-					 					</div>
-					 				</div>
-				 				</div>
-				 				<div class="product">
-				 					<div class="row">
-					 					<div class="col-md-3">
-					 						<img class="img-fluid mx-auto d-block image" src="assets/img/image.jpg">
-					 					</div>
-					 					<div class="col-md-8">
-					 						<div class="info">
-						 						<div class="row">
-							 						<div class="col-md-5 product-name">
-							 							<div class="product-name">
-								 							<a href="#">Lorem Ipsum dolor</a>
-								 							<div class="product-info">
-									 							<div>Display: <span class="value">5 inch</span></div>
-									 							<div>RAM: <span class="value">4GB</span></div>
-									 							<div>Memory: <span class="value">32GB</span></div>
-									 						</div>
-									 					</div>
-							 						</div>
-							 						<div class="col-md-4 quantity">
-							 							<label for="quantity">Quantity:</label>
-							 							<input id="quantity" type="number" value ="1" class="form-control quantity-input">
-							 						</div>
-							 						<div class="col-md-3 price">
-							 							<span>$120</span>
-							 						</div>
-							 					</div>
-							 				</div>
-					 					</div>
-					 				</div>
-				 				</div>
-				 				<div class="product">
-				 					<div class="row">
-					 					<div class="col-md-3">
-					 						<img class="img-fluid mx-auto d-block image" src="assets/img/image.jpg">
-					 					</div>
-					 					<div class="col-md-8">
-					 						<div class="info">
-						 						<div class="row">
-							 						<div class="col-md-5 product-name">
-							 							<div class="product-name">
-								 							<a href="#">Lorem Ipsum dolor</a>
-								 							<div class="product-info">
-									 							<div>Display: <span class="value">5 inch</span></div>
-									 							<div>RAM: <span class="value">4GB</span></div>
-									 							<div>Memory: <span class="value">32GB</span></div>
-									 						</div>
-									 					</div>
-							 						</div>
-							 						<div class="col-md-4 quantity">
-							 							<label for="quantity">Quantity:</label>
-							 							<input id="quantity" type="number" value ="1" class="form-control quantity-input">
-							 						</div>
-							 						<div class="col-md-3 price">
-							 							<span>$120</span>
-							 						</div>
-							 					</div>
-							 				</div>
-					 					</div>
-					 				</div>
-				 				</div>
-				 			</div>
-			 			</div>
+												
+													 <div class="col-md-1 price">
+														
+														<a href="/users/shopping/<%= basket[i]._id  %>?_method=DELETE" 
+															onclick="return confirm('ARE YOU SURE')" > 
+															<i class="fa fa-trash" aria-hidden="true"></i></a>
+													</div>
+												</div> <!--inside row close-->
+
+							 					</div> <!--info  close-->
+											
+											</div> <!--extra-->
+
+							 				</div> <!--col-lg-8 close-->
+											<hr>
+											 <% } %>
+										
+					 				</div> <!--div row close-->
+									
+								
+								
+				 				 <!--div product close-->
+								</div>
+								
+				 			</div> <!--col-lg-8 close-->
+					
+						
+					
 			 			<div class="col-md-12 col-lg-4">
 			 				<div class="summary">
 			 					<h3>Summary</h3>
-			 					<div class="summary-item"><span class="text">Subtotal</span><span class="price">$360</span></div>
+			 					<div class="summary-item"><span class="text">Subtotal</span><span class="price">$ <%= totalPrice %></span></div>
 			 					<div class="summary-item"><span class="text">Discount</span><span class="price">$0</span></div>
 			 					<div class="summary-item"><span class="text">Shipping</span><span class="price">$0</span></div>
-			 					<div class="summary-item"><span class="text">Total</span><span class="price">$360</span></div>
+			 					<div class="summary-item"><span class="text">Total</span><span class="price">$ <%= totalPrice %> </span></div>
 			 					<button type="button" class="btn btn-success btn-lg btn-block" >Checkout</button>
 				 			</div>
 			 			</div>
-		 			</div> 
-		 		</div>
-	 		</div>
+		 			</div> <!--div row close-->
+
+		 		</div><!--col-rowclose-->
+			
+	 		
 		</section>
 	</main>
 </body>
